Remove main class. Add class comment to App. Refactoring.